--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
       "express": "^4.17.0",
       "helmet": "^3.18.0",
       "jsonwebtoken": "^8.5.1",
-      "lodash": "^4.17.11",
+      "lodash": "^4.17.15",
       "md5": "^2.2.1",
       "mysql": "^2.14.1",
       "nconf": "^0.10.0",
@@ -31,8 +31,8 @@
       "typedi": "^0.8.0",
       "typeorm": "0.2.17",
       "typeorm-typedi-extensions": "^0.2.3",
-      "xss": "1.0.6",
-      "winston": "^3.2.1"
+      "winston": "^3.2.1",
+      "xss": "1.0.6"
    },
    "devDependencies": {
       "@types/bcrypt-nodejs": "0.0.30",
@@ -45,7 +45,9 @@
       "@types/nconf": "^0.10.0",
       "@types/node": "^8.0.29",
       "@types/redis": "^2.8.12",
+      "jest": "^24.8.0",
       "ts-node": "3.3.0",
+      "tslint": "^5.18.0",
       "typescript": "3.3.3333"
    }
 }
