--- a/package.json
+++ b/package.json
@@ -5,12 +5,14 @@
    "main": "src/server.js",
    "scripts": {
       "docker": "cd ./tools/docker/ &&  docker-compose up -d",
-      "test": "echo \"Error: no test specified\" && exit 1",
+      "test": "jest",
       "start-dev": "NODE_ENV=dev node build/server.js",
       "start": "ts-node src/index.ts",
       "dev": "npm install && sleep 10s && npm run migrate && npm run build && npm run start-dev",
       "migrate": "ts-node ./node_modules/.bin/typeorm migration:run",
-      "build": "./node_modules/typescript/bin/tsc"
+      "build": "./node_modules/typescript/bin/tsc",
+      "tslint": "./node_modules/tslint/bin/tslint --project '.'",
+      "tslint-fix": "./node_modules/tslint/bin/tslint --project '.' --fix"
    },
    "author": "MichalZa",
    "license": "ISC",
@@ -39,6 +41,7 @@
       "@types/body-parser": "^1.17.0",
       "@types/express": "^4.16.1",
       "@types/helmet": "0.0.43",
+      "@types/jest": "^24.0.16",
       "@types/jsonwebtoken": "^8.3.2",
       "@types/lodash": "^4.14.130",
       "@types/md5": "^2.1.33",
@@ -46,6 +49,7 @@
       "@types/node": "^8.0.29",
       "@types/redis": "^2.8.12",
       "jest": "^24.8.0",
+      "ts-jest": "^24.0.2",
       "ts-node": "3.3.0",
       "tslint": "^5.18.0",
       "typescript": "3.3.3333"
