--- a/tools/docker/docker-compose.yml
+++ b/tools/docker/docker-compose.yml
@@ -33,6 +33,8 @@ services:
     command: ["redis-server", "--appendonly", "yes"]
     volumes:
       - redis-data:/data
+    ports:
+      - "6379:6379"
 
 volumes:
   redis-data:
