travis mysql config fix

--- a/.travis.yml
+++ b/.travis.yml
@@ -10,6 +10,8 @@ env:
 cache:
   directories:
     - node_modules
+before_install:
+  - mysql -e 'CREATE DATABSE cs_project_ci;'
 install:
   - npm install
   - npm run build
