--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
    "author": "MichalZa",
    "license": "ISC",
    "dependencies": {
+      "aws-sdk": "^2.534.0",
       "bcrypt-nodejs": "0.0.3",
       "body-parser": "^1.19.0",
       "class-validator": "^0.8.1",
@@ -33,10 +34,12 @@
       "typedi": "^0.8.0",
       "typeorm": "0.2.17",
       "typeorm-typedi-extensions": "^0.2.3",
+      "uuid": "^3.3.3",
       "winston": "^3.2.1",
       "xss": "1.0.6"
    },
    "devDependencies": {
+      "@types/aws-sdk": "^2.7.0",
       "@types/bcrypt-nodejs": "0.0.30",
       "@types/body-parser": "^1.17.0",
       "@types/express": "^4.16.1",
@@ -49,6 +52,7 @@
       "@types/node": "^8.0.29",
       "@types/redis": "^2.8.12",
       "@types/sinon": "^7.0.13",
+      "@types/uuid": "^3.4.5",
       "jest": "^24.8.0",
       "sinon": "^7.3.2",
       "ts-jest": "^24.0.2",
