--- a/package.json
+++ b/package.json
@@ -6,9 +6,9 @@
    "scripts": {
       "docker": "cd ./tools/docker/ &&  docker-compose up -d",
       "test": "NODE_ENV=test jest --coverage --coverageDirectory=output/coverage/jest",
-      "start-dev": "NODE_ENV=dev node build/src/server.js",
+      "start-dev": "node build/src/server.js",
       "start": "node build/src/server.js",
-      "dev": "npm install && sleep 10s && npm run migrate && npm run build && npm run start-dev",
+      "dev": "npm install && npm run migrate && npm run start-dev",
       "migrate": "ts-node ./node_modules/.bin/typeorm migration:run",
       "build": "./node_modules/typescript/bin/tsc",
       "tslint": "./node_modules/tslint/bin/tslint --project '.'",
@@ -54,6 +54,7 @@
       "@types/sinon": "^7.0.13",
       "@types/uuid": "^3.4.5",
       "jest": "^24.8.0",
+      "nodemon": "^1.19.3",
       "sinon": "^7.3.2",
       "ts-jest": "^24.0.2",
       "ts-node": "3.3.0",
