--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
       "docker": "cd ./tools/docker/ &&  docker-compose up -d",
       "test": "jest --coverage --coverageDirectory=output/coverage/jest",
       "start-dev": "node build/src/server.js",
-      "start": "node build/src/server.js",
+      "start": "./node_modules/.bin/pm2 start build/src/server.js -i 0",
       "dev": "npm install && npm run migrate && npm run start-dev",
       "migrate": "ts-node ./node_modules/.bin/typeorm migration:run",
       "build": "./node_modules/typescript/bin/tsc",
