loopbench && move health checks to separated controller

--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
       "helmet": "^3.21.1",
       "jsonwebtoken": "^8.5.1",
       "lodash": "^4.17.15",
+      "loopbench": "^1.2.0",
       "md5": "^2.2.1",
       "mysql": "^2.14.1",
       "nconf": "^0.10.0",
@@ -48,6 +49,7 @@
       "@types/jest": "^24.0.16",
       "@types/jsonwebtoken": "^8.3.2",
       "@types/lodash": "^4.14.130",
+      "@types/loopbench": "^1.2.0",
       "@types/md5": "^2.1.33",
       "@types/nconf": "^0.10.0",
       "@types/node": "^8.0.29",
