--- a/v3/Jenkinsfile
+++ b/v3/Jenkinsfile
@@ -5,15 +5,21 @@ pipeline {
 
     stages {
       stage("Dependencies") {
-        installDependencies()
+        steps {
+          installDependencies()
+        }
       }
       stage("Test") {
-        runTests()
+        steps {
+          runTests()
+        }
       }
       stage("Lint") {
-        runLint()
+        steps() {
+          runLint()
+        } 
       }
-    }
+  }
 }
 
 frontend_project_dir = "v3"
