--- a/v3/Jenkinsfile
+++ b/v3/Jenkinsfile
@@ -8,9 +8,11 @@ pipeline {
     }
 
     stages {
-      stage("Dependencies") {
-        steps {
-          installDependencies()
+      docker.image('angular/ngcontainer').inside {
+        stage("Dependencies") {
+          steps {
+            installDependencies()
+          }
         }
       }
       stage("Test") {
